# Orchestrator

./: Cargo.toml  README.md
migrations/: 01_initial.sql
src/: cli.rs  engine.rs  executor.rs  main.rs  plan.rs  spec.rs
src/registry/: mod.rs  models.rs  sqlite.rs
